<resources>
    <string name="app_name">Shore</string>

    <string name="a_layer_of_truth">A layer of truth on every forward</string>

    <string name="extra_large_dummy_text">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry. \n\nWhat is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry. \nWhat is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry. \n\nWhat is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry.</string>
    <string name="large_dummy_text">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry.</string>
    <string name="small_dummy_text">Lorem Ipsum</string>
    <string name="tiny_dummy_text">Lorem</string>
    <string name="medium_dummy_text">What is Lorem Ipsum Lorem Ipsum is simply dummy text?</string>
    <string name="dummy_email">htts://www.example.com</string>

    <string name="whatsapp_package_name">com.whatsapp</string>


    <string-array name="array_navigation_labels">
        <item>@string/home</item>
        <item>@string/past_checks</item>
        <item>@string/favourites</item>
        <item>@string/settings</item>
        <item>@string/help_support</item>
        <item>@string/privacy_policy</item>
        <item>@string/share_app</item>
        <item>@string/rate_us</item>
        <item>@string/about_us</item>
    </string-array>

    <string-array name="array_navigation_titles">
        <item>@null</item>
        <item>@string/past_checks</item>
        <item>@string/favourites</item>
        <item>@string/settings</item>
        <item>@string/help_support</item>
        <item>@string/privacy_policy</item>
        <item>@null</item>
        <item>@null</item>
        <item>@string/about_us</item>
    </string-array>


    <!--    Nav items-->
    <string name="home">Home</string>
    <string name="bookmark">Bookmarks</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="past_checks">Past checks</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share app</string>
    <string name="rate_us">Rate us</string>


    <string name="txt_no_data">No Data Found!</string>


    <!--    Dialog utils-->
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="no_thanks_take_me_to_app">No Thanks! Take me to the app</string>

    <!--    Permission utils-->
    <string name="permission_title_draw_overlays">Allow Shore to draw over other apps?</string>
    <string name="permission_message_draw_overlays">You have to enable the draw overlays permission for this app to work.</string>


    <string name="permission_title_storage">Allow Shore to access storage?</string>
    <string name="permission_message_storage">We need storage permission to store articles screenshot locally.</string>
    <string name="permission_storage_error">Please allow storage permission first to share it</string>

    <string name="err_permission_is_required">Permission is required</string>

    <string name="permission_title_accessibility">Allow Shore to use accessibility service?</string>
    <string name="permission_message_accessibility">We need accessibility permission to protect you from fake-news in real time.</string>
    <string name="permission_accessibility_description">Switch \'ON\' in the top right corner to save time as the Shore unlocks these cool features for you:\n- Real time Fake news detections on WhatsApp forwards\n- Share actual story instead of internet fiction\n\nNote:\nYou may receive a standard warning after this screen. Don\'t worry about it, The Shore will never collect your personal information. Contact info@theshoremedia.com for any concerns.</string>

    <string name="help_look_for_shore_in_the_list_and_click">Look for \'Shore\' is the list and click</string>
    <!--    TODO:connectivity in next release -->
    <string name="help_see_how_shore_works_on_whatsapp">See how \'Shore\' works on WhatsApp.</string>

    <string name="err_work_is_under_process">Work is under-process!</string>

    <string name="the_shore_is_active">Shore protection is activated</string>

    <string name="share">Share</string>
    <string name="mark_as_favourite">Mark as favourite</string>
    <string name="delete">Delete</string>

    <string name="news_stories">News stories</string>

    <string name="auto_detect_fake_news_on_whatsapp">Auto detect fake news on WhatsApp</string>
    <string name="run_in_battery_optimization_mode">Run in Battery optimization mode</string>

    <string name="key_auto_detect">key_auto_detect</string>
    <string name="key_allow_battery_optimization">key_allow_battery_optimization</string>
    <string name="check_it_with_shore">Check it with Shore</string>


    <string name="exception_message_no_connection">Internet connection error</string>

    <string name="lbl_forwarded">Forwarded</string>
    <string name="lbl_abt_source">About the source</string>
    <string name="lbl_more">More</string>
    <string name="lbl_less">Less</string>


    <string name="lbl_intro_1">Tired of\n<b>fake forwards?</b></string>
    <string name="des_intro_1">Shore will allows you to discover the facts in real-time with no-extra efforts.</string>
    <string name="btn_get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="lbl_intro_2">Read\n<b>Facts, Not Fakes </b></string>
    <string name="des_intro_2">Wrong information results as weak arguments in debates, Read facts and put better arguments</string>
    <string name="lbl_intro_3">Share\n<b>Facts, Not Fakes </b></string>
    <string name="des_intro_3">Don\'t blindly trust on your friend. Who knows he has done it on someone else.</string>
    <string name="lbl_intro_4">We respect\n<b>of your privacy</b></string>
    <string name="des_intro_4">We don\'t collect your personal information. We serve to make a better future for us.</string>


    <string name="fact_checks">Fact checks</string>
    <string name="sources">Sources</string>

    <string name="lbl_investigate_a_claim">Investigate a claim</string>
    <string name="des_manual_investigation">To investigate a claim, either type or paste your chosen claim into the box below and click Investigate.\n\nThis can be entered in any language.</string>
    <string name="hint_enter_your_claim">Enter your claim</string>
    <string name="investigate">Investigate</string>
    <string name="error_whatsapp_real_time_fake_news_detection_is_not_activated_now">WhatsApp real-time fake news detection is not activated.</string>
    <string name="success_whatsapp_real_time_fake_news_detection_is_activated_now">You are protected from fake news, Shore WhatsApp real-time fake news detection is activated.</string>
    <string name="btn_activate">Activate</string>

    <string name="add_custom_source">Add custom source</string>
    <string name="custom_sources">Custom Sources</string>
    <string name="shore_sources">Shore Sources</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="ifcn_signatory">International Fact-checking Network Signatory</string>
    <string name="news_source">News Source</string>

    <string name="rate_the_app">Rate our app</string>
    <string name="i_love_it">I\'m loving it!</string>
    <string name="dont_like_the_app">Don\'t like the app? Let us know</string>
    <string name="key_view_name">view_name</string>
    <string name="key_model">model</string>
    <string name="msg_source_successfully_added_as_verification_source">%1$s successfully added as source of verification.</string>

    <string name="err_empty_claim">Please enter claim to investigate</string>
    <string name="err_oops_we_didnt_find_any_ifcn_signatory_story">Oops… We did not find any story published from our credible sources. You can read these stories as these are published from custom sources.</string>
    <string name="search_result">Search result</string>

    <string name="article_delete_successfully">Article deleted successfully</string>
    <string name="article_marked_as_favourite_successfully">Article marked as favourite successfully</string>
    <string name="article_removed_from_favourite_successfully">Article removed from favourite successfully</string>

    <string name="msg_rate_us">Your opinion is very important to us and can help us improve our services. Please take a moment and let us know how satisfied you are with our services.</string>

    <string name="support_mail_subject">Shore suggestions from User</string>
    <string name="support_mail_text">Thanks for using Shore, We are working on expanding this project and would appreciate your input as a valued user of the items being worked on.\nPlease specify what you did not like about Shore:\n</string>

    <string name="url_privacy_policy">https://theshoremedia.com/privacy-policy</string>
    <string name="url_about_us">https://theshoremedia.com/about-us</string>
    <string name="url_help">https://theshoremedia.com/support</string>
    <string name="url_terms_conditions">https://theshoremedia.com/toc</string>

    <string name="read_complete_article_at_and_download_shore_to_detect_fake_news_in_real_time">Read complete story at: %1s\n\nDownload Shore to detect fake-news in real-time on WhatsApp:\nhttps://play.google.com/store/apps/details?id=com.theshoremedia</string>

    <string name="restart">Restart</string>
    <string name="update_downloaded">Update downloaded</string>
</resources>
