<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_past_checks"
            android:icon="@drawable/ic_clear_24px"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_right_arrow"
            android:title="@string/bookmark" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_clear_24px"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_help_support"
            android:icon="@drawable/ic_right_arrow"
            android:title="@string/bookmark" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_right_arrow"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_right_arrow"
            android:title="@string/privacy_policy" />
    </group>
    
</menu>