<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded"
    android:backgroundTint="@color/app_background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_black_background"
        android:orientation="horizontal"
        android:padding="@dimen/small_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading"
            style="@style/textView"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/heading_textsize"
            android:textStyle="bold" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/textView"
        android:layout_gravity="center"
        android:text="@string/medium_dummy_text"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:gravity="center"
        android:textSize="@dimen/large_textsize"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        style="@style/withAlphaTextView"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/large_dummy_text"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/defaultBtnSmallStyle"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOkay"
            style="@style/defaultBtnSmallStyle"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>