<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_black_background"
        android:orientation="horizontal"
        android:padding="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading"
            style="@style/textView"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/heading_textsize"
            android:textStyle="bold" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/textView"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/small_dummy_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

    <RelativeLayout
        android:id="@+id/llSpinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/small_btn_height"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:background="@drawable/bg_rounded_stroke"
        android:padding="@dimen/extra_small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnSource"
            style="@style/spinner"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/large_dummy_text" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llSpinner">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/defaultBtnSmallStyle"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOkay"
            style="@style/defaultBtnSmallStyle"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>